--- a/index.html
+++ b/index.html
@@ -183,14 +183,15 @@
             </a>
 
             <ul class="menu-sub">
-              <li class="menu-item">
-                <a href="all_institue.html" class="menu-link">
-                  <div data-i18n="All Institute">All Institute</div>
-                </a>
-              </li>
+
               <li class="menu-item">
                 <a href="institute-add.html" class="menu-link">
                   <div data-i18n="Institute Add">Institute Add</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="all_institue.html" class="menu-link">
+                  <div data-i18n="All Institute">All Institute</div>
                 </a>
               </li>
 
@@ -211,7 +212,7 @@
               </li>
               <li class="menu-item">
                 <a href="all_Trade.html" class="menu-link">
-                  <div data-i18n="Courses Details">Courses Details</div>
+                  <div data-i18n="All Courses">All Courses</div>
                 </a>
               </li>
             </ul>
@@ -225,13 +226,13 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="teacher_add.html" class="menu-link">
                   <div data-i18n="Teacher Add">Teacher Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
-                  <div data-i18n="Teacher Details">Teacher Details</div>
+                <a href="all_teacher.html" class="menu-link">
+                  <div data-i18n="All Teacher">All Teacher</div>
                 </a>
               </li>
             </ul>
@@ -252,7 +253,7 @@
               </li>
               <li class="menu-item">
                 <a href="all_student.html" class="menu-link">
-                  <div data-i18n="Student Details">Student Details</div>
+                  <div data-i18n="All Student">All Student</div>
                 </a>
               </li>
             </ul>
@@ -264,11 +265,6 @@
             </a>
 
             <ul class="menu-sub">
-              <li class="menu-item">
-                <a href="#" class="menu-link">
-                  <div data-i18n="Attendance Type">Attendance Type</div>
-                </a>
-              </li>
               <li class="menu-item">
                 <a href="attendance_add.html" class="menu-link">
                   <div data-i18n="Attendance Add">Attendance Add</div>
@@ -313,8 +309,33 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="user_detail.html" class="menu-link">
-                  <div data-i18n="User Details">User Details</div>
+                <a href="all_user_detail.html" class="menu-link">
+                  <div data-i18n="All User">All User</div>
+                </a>
+              </li>
+            </ul>
+          </li>
+         
+          <li class="menu-item">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+              <i class="menu-icon tf-icons las la-user"></i>
+              <div data-i18n="Exam">Exam</div>
+            </a>
+
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="exam-add.html" class="menu-link">
+                  <div data-i18n="Exam Add">Exam Add</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="exam_group.html" class="menu-link">
+                  <div data-i18n="Exam Group">Exam Group</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="exam_result.html" class="menu-link">
+                  <div data-i18n="Exam Result">Exam Result</div>
                 </a>
               </li>
             </ul>
@@ -1200,7 +1221,7 @@
               <!--/ Order Statistics -->
 
               <!-- Expense Overview -->
-          
+
             </div>
           </div>
           <!-- / Content -->
