--- a/teacher_detail.html
+++ b/teacher_detail.html
@@ -747,10 +747,10 @@
           <!-- Content -->
 
 
-          <div class="container-xxl flex-grow-1 container-p-y">
+          <div class="container-xxl flex-grow-1 ">
             <div class="row">
               <div class="col-12">
-                <div class="card mb-4">
+                <div class="card mb-4 mt-4">
                   <div class="user-profile-header-banner">
                     <img src="./assets/img/pages/profile-banner.png" alt="Banner image" class="rounded-top img-fluid">
                   </div>
@@ -769,7 +769,7 @@
                             <li class="list-inline-item fs-5">
                               <div class="user-info ">
                                 <h4 class="mb-2">Faizan Mati</h4>
-                                <span class="badge bg-label-secondary fw-bolder">Student</span>
+                                <span class="badge bg-label-secondary fw-bolder">Teacher</span>
                               </div>
                             </li>
                           </ul>
@@ -781,119 +781,77 @@
               </div>
             </div>
 
-            <div class="col-lg-8">
 
-              <!-- User Pills -->
-              <ul class="nav nav-pills flex-column flex-md-row">
-                <li class="nav-item"><a class="nav-link" href="app-user-view-account.html"><i
-                      class="bx bx-user me-1"></i>Profile</a></li>
-                <li class="nav-item"><a class="nav-link " href="app-user-view-security.html"><i
-                      class="bx bx-lock-alt me-1"></i>Attendance</a></li>
-                <li class="nav-item"><a class="nav-link" href="app-user-view-billing.html"><i
-                      class="bx bx-detail me-1"></i>Fees</a></li>
-                <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i
-                      class="bx bx-bell me-1"></i>Exam</a></li>
-              </ul>
-              <!--/ User Pills -->
-            </div>
           </div>
 
-          <div class="container-xxl flex-grow-1 container-p-y">
+          <div class="container-xxl flex-grow-1">
             <div class="card">
-
-              <h5 class="card-header">Exam</h5>
-
-              <div class="table-responsive text-nowrap  table_higth">
-                <table class="table table-hover text-center">
-                  <thead class="table_body table_body">
-                    <tr>
-                      <th>#</th>
-                      <th>Exam Name</th>
-                      <th>Date</th>
-                      <th>Day</th>
-                      <th>Total Marks</th>
-                      <th>Student Marks</th>
-                      <!-- <th>Address</th>
-                      <th>Region</th>
-                      <th>Actions</th> -->
-                    </tr>
-                  </thead>
-                  <tbody class="table-border-bottom-0">
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-
-                  </tbody>
-                </table>
+              <div class="container">
+                <h5 class="pb-2 border-bottom my-4">Details</h5>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="info-container">
+                      <ul class="list-unstyled">
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Institute ID:</span>
+                          <span>2671727</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Teacher Name:</span>
+                          <span>Faizan</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Date Of Birth:</span>
+                          <span>12-feb-2001</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">CNIC:</span>
+                          <span>31304-1227453-3</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Teacher Address:</span>
+                          <span>Korangi Karachi</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Phone No:</span>
+                          <span>(+92)3245634789</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="info-container">
+                      <ul class="list-unstyled">
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Institute Name:</span>
+                          <span>The Hunar Foundation</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Teacher Father Name:</span>
+                          <span>Ahmed</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Gender:</span>
+                          <span>Male</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Qualification:</span>
+                          <span>Master</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Course:</span>
+                          <span>Web Developement</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Email:</span>
+                          <span>Abc@gmail.com</span>
+                        </li>
+                        
+                      
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
