--- a/user_detail.html
+++ b/user_detail.html
@@ -108,14 +108,15 @@
             </a>
 
             <ul class="menu-sub">
-              <li class="menu-item">
-                <a href="all_institue.html" class="menu-link">
-                  <div data-i18n="All Institute">All Institute</div>
-                </a>
-              </li>
+
               <li class="menu-item">
                 <a href="institute-add.html" class="menu-link">
                   <div data-i18n="Institute Add">Institute Add</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="all_institue.html" class="menu-link">
+                  <div data-i18n="All Institute">All Institute</div>
                 </a>
               </li>
 
@@ -136,7 +137,7 @@
               </li>
               <li class="menu-item">
                 <a href="all_Trade.html" class="menu-link">
-                  <div data-i18n="Courses Details">Courses Details</div>
+                  <div data-i18n="Courses Details">All Courses</div>
                 </a>
               </li>
             </ul>
@@ -150,13 +151,13 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="teacher_add.html" class="menu-link">
                   <div data-i18n="Teacher Add">Teacher Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
-                  <div data-i18n="Teacher Details">Teacher Details</div>
+                <a href="all_teacher.html" class="menu-link">
+                  <div data-i18n="Teacher Details">All Teacher</div>
                 </a>
               </li>
             </ul>
@@ -177,7 +178,7 @@
               </li>
               <li class="menu-item">
                 <a href="all_student.html" class="menu-link">
-                  <div data-i18n="Student Details">Student Details</div>
+                  <div data-i18n="Student Details">All Student</div>
                 </a>
               </li>
             </ul>
@@ -189,11 +190,6 @@
             </a>
 
             <ul class="menu-sub">
-              <li class="menu-item">
-                <a href="#" class="menu-link">
-                  <div data-i18n="Attendance Type">Attendance Type</div>
-                </a>
-              </li>
               <li class="menu-item">
                 <a href="attendance_add.html" class="menu-link">
                   <div data-i18n="Attendance Add">Attendance Add</div>
@@ -239,7 +235,32 @@
               </li>
               <li class="menu-item">
                 <a href="user_detail.html" class="menu-link">
-                  <div data-i18n="User Details">User Details</div>
+                  <div data-i18n="User Details">All User</div>
+                </a>
+              </li>
+            </ul>
+          </li>
+         
+          <li class="menu-item">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+              <i class="menu-icon tf-icons las la-user"></i>
+              <div data-i18n="User">Exam</div>
+            </a>
+
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="exam-add.html" class="menu-link">
+                  <div data-i18n="User Add">Exam Add</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="exam_group.html" class="menu-link">
+                  <div data-i18n="User Details">Exam Group</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="exam_result.html" class="menu-link">
+                  <div data-i18n="User Details">Exam Result</div>
                 </a>
               </li>
             </ul>
@@ -780,11 +801,11 @@
                           <span>Admin</span>
                         </li>
                         <li class="mb-3">
-                          <span class="fw-bold me-2">Email:</span>
+                          <span class="fw-bold me-2">User Email:</span>
                           <span>Abc@gmail.com</span>
                         </li>
                         <li class="mb-3">
-                          <span class="fw-bold me-2">Number:</span>
+                          <span class="fw-bold me-2">User Number:</span>
                           <span>(+92)3246739928</span>
                         </li>
                         <li class="mb-3">
